[gd_scene load_steps=11 format=3 uid="uid://bh2f5ivbe8hgl"]

[ext_resource type="Texture2D" uid="uid://c2gmudvsf7kl6" path="res://platform.png" id="1_l7u6x"]
[ext_resource type="Script" path="res://mob.gd" id="1_os8sn"]
[ext_resource type="Texture2D" uid="uid://u0y1hn2kbadw" path="res://dummy.png" id="2_n8ucw"]
[ext_resource type="Texture2D" uid="uid://d7orulwfu07p" path="res://golem.png" id="4_50ul4"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_j3qfc"]
size = Vector2(12, 11.3333)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_u8il5"]
size = Vector2(4.66667, 4)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_48owi"]
size = Vector2(1, 5.33333)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_la4gi"]
size = Vector2(1, 5.33333)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_87srf"]
size = Vector2(6, 1)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_116ei"]
size = Vector2(6, 1)

[node name="mob" type="CharacterBody2D"]
scale = Vector2(3, 3)
script = ExtResource("1_os8sn")

[node name="Platform" type="Sprite2D" parent="."]
texture = ExtResource("1_l7u6x")

[node name="Dummy" type="Sprite2D" parent="."]
position = Vector2(0, -4)
texture = ExtResource("2_n8ucw")

[node name="mob" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="mob"]
shape = SubResource("RectangleShape2D_j3qfc")

[node name="Golem" type="Sprite2D" parent="."]
visible = false
position = Vector2(0.666667, -4)
texture = ExtResource("4_50ul4")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Area2D"]

[node name="CollisionShape2D3" type="CollisionShape2D" parent="Area2D"]

[node name="CollisionShape2D4" type="CollisionShape2D" parent="Area2D"]

[node name="Node2D" type="Node2D" parent="."]

[node name="push" type="Area2D" parent="Node2D"]
collision_layer = 8
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="Node2D/push"]
shape = SubResource("RectangleShape2D_u8il5")

[node name="rigpush" type="Area2D" parent="Node2D"]
collision_layer = 16
collision_mask = 9

[node name="CollisionShape2D" type="CollisionShape2D" parent="Node2D/rigpush"]
visibility_layer = 2
position = Vector2(3.83333, -1.19209e-07)
shape = SubResource("RectangleShape2D_48owi")

[node name="lefpush" type="Area2D" parent="Node2D"]
collision_layer = 16
collision_mask = 9

[node name="CollisionShape2D" type="CollisionShape2D" parent="Node2D/lefpush"]
position = Vector2(-3.83333, 0)
shape = SubResource("RectangleShape2D_la4gi")

[node name="downpush" type="Area2D" parent="Node2D"]
collision_layer = 16
collision_mask = 9

[node name="CollisionShape2D" type="CollisionShape2D" parent="Node2D/downpush"]
position = Vector2(0, 3.5)
shape = SubResource("RectangleShape2D_87srf")

[node name="uppush" type="Area2D" parent="Node2D"]
collision_layer = 16
collision_mask = 9

[node name="CollisionShape2D" type="CollisionShape2D" parent="Node2D/uppush"]
position = Vector2(0, -3.5)
shape = SubResource("RectangleShape2D_116ei")

[connection signal="area_entered" from="mob" to="." method="_on_mob_area_entered"]
[connection signal="area_entered" from="Node2D/rigpush" to="." method="_on_rigpush_area_entered"]
[connection signal="area_entered" from="Node2D/lefpush" to="." method="_on_lefpush_area_entered"]
[connection signal="area_entered" from="Node2D/downpush" to="." method="_on_downpush_area_entered"]
[connection signal="area_entered" from="Node2D/uppush" to="." method="_on_uppush_area_entered"]
